--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
         <img src = "profile-pic.png" alt="real icon" width="30" height="30">
         <nav>
             <a href="index.html">Home</a>
-            <a href="contact.html">Contact</a>
+            <a href="contact.html">Contact Brendon Choi</a>
             <a href="about.html">About</a>
             <a href="work.html">Work</a>
         </nav>
