--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <p>I am Brendon Choi</p>
         <p>I am currently a student at Syracuse</p>
         <a href="#">Default Link</a>
+        <p>I'm hosted with GitHub Pages.</p>
         <button type="button">Default Button</button>
         <button class="button__secondary">Secondary Button</button>
     </body>
